--- a/games/chess/index.html
+++ b/games/chess/index.html
@@ -126,6 +126,7 @@
         var config = {
             draggable: true,
             position: 'start',
+            pieceTheme: 'https://chessboardjs.com/img/chesspieces/wikipedia/{piece}.png',
             onDragStart: onDragStart,
             onDrop: onDrop,
             onSnapEnd: onSnapEnd
