--- a/game.html
+++ b/game.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Play Game - toetuffgng'hub'</title>
-  <link rel="stylesheet" href="css/base.css">
-  <link rel="stylesheet" href="css/layout.css">
-  <link rel="stylesheet" href="css/game.css"> <!-- this will be new -->
+  <link rel="stylesheet" href="css/base.css?v=7">
+  <link rel="stylesheet" href="css/layout.css?v=7">
+  <link rel="stylesheet" href="css/game.css?v=7"> <!-- this will be new -->
   <link rel="icon" href="favicon.ico">
 
 </head>
@@ -26,7 +26,7 @@
     <iframe id="gameIframe" src="" frameborder="0" allowfullscreen></iframe>
   </main>
 
-  <script type="module" src="js/pages/game.js"></script>
+  <script type="module" src="js/pages/game.js?v=4"></script>
 </body>
 
 </html>
